CHANGES

0.10.31 wip
- change the language codes from 3-letter to 2. Related to https://github.com/gutenbergtools/ebookmaker/issues/243
- fix bug in PubInfo.__str__ that was omitting the year. Fixes https://github.com/gutenbergtools/ebookmaker/issues/245

0.10.30 (September 19, 2024)
- properly skip authors with None as name (Python null, not the string "None")
- improve year parsing in 260 attributes
- don't try to put first name first if author is a publisher.
    - for multiple reasons, our author table should add a column denoting corporate entities. This is needed in order for us to make correct MARC records. (we want 110 fields, not 100 fields.)
- 0.10.26-29 had bugs discovered in testing and were not deployed

0.10.25 (May 22, 2024)
- don't strip periods from title_no_subtitle

0.10.24 (April 22, 2024)
- The `heading` column in the database's author-book many to many table was being ignored by much of our code. The result was that multiple authors were being listed in alphabetical order. now, the heading column is used and the first sort column for the authors of a book, and the authors other than the first author are have heading=2 (instead of the default `heading=1`) set on initial metadata load. The cataloguer can reset the heading numbers, but does not wish the order of authors other than the "main" author to be tracked in the database.

0.10.23 (March 15, 2024)
- fixed a reversion in 0.10.10 that made author name matching case sensitive.

0.10.22 (February 26, 2024)
- credits should be replaced, not appended
- added test for credit replacement
- fixed tests for current db
- 0.10.21 was not deployed

0.10.20 (January 12, 2024)
- add credit cleaning to GutenbergDatabaseDublinCore. required for autocat3 https://github.com/gutenbergtools/autocat3/issues/116
- refactor credit cleaning
- refine pretty_title truncation to always add … to truncated titles. improves #33
- change no-gutenberg-id log message from warning to info, improve wording fixes #35
