@@ -3,6 +3,7 @@ CHANGES
 0.10.31 wip
 - change the language codes from 3-letter to 2. Related to https://github.com/gutenbergtools/ebookmaker/issues/243
 - fix bug in PubInfo.__str__ that was omitting the year. Fixes https://github.com/gutenbergtools/ebookmaker/issues/245
+- update tests
 
 0.10.30 (September 19, 2024)
 - properly skip authors with None as name (Python null, not the string "None")
